--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -13,9 +13,9 @@
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
             <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
-                <span class="sr-only">码匠社区</span>
+                <span class="sr-only">德良社区</span>
             </button>
-            <a class="navbar-brand" href="#">码匠社区</a>
+            <a class="navbar-brand" href="#">德良社区</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,7 +27,7 @@
                 <button type="submit" class="btn btn-default">搜索</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="#">登陆</a></li>
+                <li><a href="https://github.com/login/oauth/authorize?client_id=0f6e13ac701d580d70df&redirect_uri=http://localhost:8887/callback&scope=user&state=1">登陆</a></li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button"
                        aria-haspopup="true" aria-expanded="false">我 <span class="caret"></span></a>
